@@ -1,5 +1,8 @@
 package com.toutcru.toutcru.configuration;
 
+import com.toutcru.toutcru.user.User;
+import com.toutcru.toutcru.user.UserCustomDetails;
+import com.toutcru.toutcru.user.UserRepository;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -10,14 +13,15 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import java.util.Collections;
 import java.io.IOException;
-import java.util.List;
 
 @Component
 @RequiredArgsConstructor
 public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
+    private final UserRepository userRepository;
 
     @Override
     protected void doFilterInternal(
@@ -26,6 +30,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             FilterChain filterChain
     ) throws ServletException, IOException {
         System.out.println("=== JWT Filter ===");
+        System.out.println("Request URI: " + request.getRequestURI());
 
         if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
             filterChain.doFilter(request, response);
@@ -33,20 +38,25 @@ public class JwtAuthFilter extends OncePerRequestFilter {
         }
 
         String header = request.getHeader("Authorization");
-        System.out.println("Header Authorization: " + header);
+
         if (header != null && header.startsWith("Bearer ")) {
             String token = header.substring((7));
-            System.out.println("Token extrait: " + token.substring(0, 20) + "...");
-
             String email = jwtUtil.getEmailFromToken(token);
-            System.out.println("Email du token: " + email);
 
             if (jwtUtil.validateToken(token, email)) {
-                System.out.println("Token valide !");
-                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(email, null, List.of());
+                User user = userRepository.findByEmail(email)
+                        .orElseThrow(() -> new RuntimeException("User not found"));
+
+                UserCustomDetails userDetails = new UserCustomDetails(user, Collections.emptyList());
+
+                UsernamePasswordAuthenticationToken authentication =
+                        new UsernamePasswordAuthenticationToken(
+                                userDetails,
+                                null,
+                                userDetails.getAuthorities()
+                        );
+
                 SecurityContextHolder.getContext().setAuthentication(authentication);
-            } else {
-                System.out.println("Token INVALIDE !");
             }
         }
         filterChain.doFilter(request, response);
